2008-04-18  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/datafile.c (df_skip_bytes): Skip bytes from a file using fseek;
	skip bytes from a pipe or stdin using repeated reading of single bytes.

2008-04-16  Ethan A Merritt  <merritt@u.washington.edu>

	* term/x11.trm:  Use a more finely sampled palette to generate colors.
	It was using only 500 samples; change it to use the default (=5000) in
	approximate_palette().
	Bug #1906502

2008-04-15  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/datafile.c (plot_option_binary_format df_readbinary df_skip_bytes)
	src/datafile.h: Allow repeat field in binary format greater to be more
	than a single digit.

	* docs/gnuplot.doc: Document that the binary format string allows
	"discard" symbol and numerical repeat-field.

	Bug #1937089

2008-04-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (load_file lf_push lf_pop) src/misc.h docs/gnuplot.doc
	src/command.c (load_command call_command):
	Save and restore the input line and token parsing structures in
	lf_push() and lf_pop().  This allows both the 'call' and 'load'
	functions to be used recursively without destroying the previous
	input line and parsing context.  So 'load' no longer needs to be the
	last command on a line.

2008-04-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (load_file)  src/misc.h src/util.c (PRINT_FILE_AND_LINE)
	src/plot.c (main load_rcfile) src/command.c (call_command load_command):
	Keeping infile_name in a global causes a memory leak.  Move it to the
	dynamic structure list maintained by lf_push() and lf_pop().
	The callers in plot.c and command.c must pass a gp_alloc()ed string for
	the plot name, but need not worry about freeing it later. lf_push()
	and lf_pop() will handle this automatically, including error recovery.

2008-04-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.h src/misc.c(lf_push): Track recursion depth for load_file().

2008-04-10  Ethan A Merritt  <merritt@u.washington.edu>
